add route user register
